--- a/Assets/Scripts/Todo.txt
+++ b/Assets/Scripts/Todo.txt
@@ -9,6 +9,7 @@
 6. 리스폰 or 뒤로 튕기기							-
 7. 플레이 타임 측정 및 기록						O
 8. 카메라 세팅									O
+9. chaser 점프존 구현							-
 
 -----디자인-----
 1. 캐릭터 이동 애니메이션							O
