--- a/Assets/Scripts/Todo.txt
+++ b/Assets/Scripts/Todo.txt
@@ -2,8 +2,8 @@
 
 -----기능------
 1. 캐릭터 이동, 점프 구현							O
-2. 거북이 물에 닿으면 빨라지기						-
-3. 토끼 물에 닿으면 느려지기						-
+2. 거북이 물에 닿으면 빨라지기						O
+3. 토끼 물에 닿으면 느려지기						O
 4. 첫 화면에서 클릭 후 게임 시작					O
 5. 맵 더 만들기 Spring, Autumn, Winter 까지	   3/4
 6. 리스폰 or 뒤로 튕기기							-
